# hermes-doctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-05-30-multi-agent-diagnostics-plan.md
examples/: sample_report.md
src/hermes_doctor/: cli.py
tests/: snapshot_helpers.py  test_cli.py  test_finding_ids.py  test_label_invariants.py  test_redaction_adversarial.py  test_snapshots.py  test_update_readiness.py  test_version_cli.py
tests/fixtures/critical/: cron.txt  expected_summary.txt
tests/fixtures/critical/home/memories/: REMINDERS.md
tests/fixtures/healthy/: cron.txt  expected_summary.txt
tests/fixtures/healthy/home/memories/: REMINDERS.md  notes.md
tests/fixtures/healthy/home/skills/: example.md
tests/fixtures/warning/: expected_summary.txt
tests/fixtures/warning/home/memories/: REMINDERS.md  index.md
