[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-doctor"
version = "0.2.1"
description = "Read-only health scanner for long-running Hermes Agent setups"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sam Ahn"}]
keywords = ["hermes-agent", "doctor", "health-check", "cli", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/samahn0601/hermes-doctor"
Repository = "https://github.com/samahn0601/hermes-doctor"
Issues = "https://github.com/samahn0601/hermes-doctor/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
hermes-doctor = "hermes_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 140

[tool.pytest.ini_options]
testpaths = ["tests"]
